# LLMconfig

./: .gitignore  API_DOC.md  DEPLOYMENT.md  README.md  aigc_rewriter.py  aigc_rewriter_server.py  deploy.sh  main.py  pyproject.toml
scripts/: watchdog.sh
