[project]
name = "aigc-rewriter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "llama-cpp-python>=0.3.22",
    "pip>=26.1.1",
    "uvicorn>=0.46.0",
]

[project.scripts]
aigc-rewriter-server = "aigc_rewriter_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["aigc_rewriter_server"]

[tool.uv]
package = true

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
